# hpc

./: README.md
HPCA-PC_Code-Final/: CMakeLists.txt  nbody.cpp
HPCA-PC_Code-Final/include/: backend_registry.h  benchmark.h  body.h  body_soa.h  nbody_helper.h
HPCA-PC_Code-Final/opencl/: nbody.cl
HPCA-PC_Code-Final/src/: backend_registry.cpp  benchmark.cpp  body_soa.cpp  nbody_helper.cpp
HPCA-PC_Code-Final/src/backends/: omp.cpp  opencl.cpp  sequential.cpp  simd.cpp  simd_omp.cpp
